[package]
name = "smoke-notarize"
version = "0.0.1"
edition = "2021"
publish = false
description = "Phase 1 plan 01-02 throwaway smoke app — proves macOS sign + notarize + staple end-to-end with the FFmpeg sidecar bundled. Not shipped to users."

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "smoke-notarize"
path = "src/main.rs"
